2009-02-09  Adam Nemet  <anemet@caviumnetworks.com>

	* configure.host: Set abi_baseline_pair for mips64*-linux.
	* config/abi/post/mips64-linux-gnu/baseline_symbols.txt: New file.

2009-02-08  Chris Fairles  <cfairles@gcc.gnu.org>

	* include/std/thread (this_thread::get_id): Inline.

2009-02-08  Chris Fairles  <cfairles@gcc.gnu.org>

	* include/std/thread (thread<>::thread(_Callable)): Explicitly use
	_Callable as template argument for _M_make_shared_data.
	* testsuite/30_threads/thread/cons/6.cc: New.
	* testsuite/30_threads/thread/cons/7.cc: New.
	* testsuite/30_threads/thread/cons/8.cc: New.

2009-02-07  Benjamin Kosnik  <bkoz@redhat.com>

	* testsuite/30_threads/thread/member: To..
	* testsuite/30_threads/thread/members: ...this.
	* testsuite/30_threads/condition_variable/member: To...
	* testsuite/30_threads/condition_variable/members: ...this.

2009-02-06  Benjamin Kosnik  <bkoz@redhat.com>

	* include/std/thread (thread::id): Move definition inside thread.
	Use native_handle_type. Remove this_thread::get_id friend.
	Change __thread_data_ptr to __shared_base_ptr.
	(thread::id::id(native_handle_type): Make public. Still explicit.
	Use native_handle_type. Change _M_thread_id to _M_thread.
	(thread::__thread_data_base): Rename to _Impl_base. Use id, change
	_M_thread_handle to _M_id.
	(thread::__thread_data): Rename to _Impl.
	Fixup for renames.
	(thread::_M_make_thread_data): Return derived type.
	(thread::hardware_concurrency): Add definition for default case.
	(thread::get_id): Now can define inline.
	(thread): Change _M_thread_data to _M_data.
	(this_thread::get_id): Now can define inline.
	* src/thread.cc (__thread_proxy): Rename to
	execute_native_thread_routine.
	Fixup for other renames.
	* testsuite/30_threads/thread/cons/assign_neg.cc: New.
	* testsuite/30_threads/thread/cons/copy_neg.cc: New.
	* testsuite/30_threads/thread/algorithm: Move to..
	* testsuite/30_threads/thread/swap: ...this.